Fix button text alignment

--- a/client/components/backup-storage-space/usage-warning/style.scss
+++ b/client/components/backup-storage-space/usage-warning/style.scss
@@ -18,6 +18,7 @@
 
 	color: var( --color-text );
 	font-size: $font-body;
+	text-align: initial;
 
 	&:visited {
 		color: var( --color-text );
